refactor setting release artifact zip

--- a/modules/scripts/content/codebuild.job.yml
+++ b/modules/scripts/content/codebuild.job.yml
@@ -6,7 +6,7 @@ phases:
   install:
     commands:
       - apt-get update -y
-      - apt-get install -y jq
+      - apt-get install -y jq zip
 
   build:
     commands:
